# HimalytixNew

./: .coverage  .coverage.DESKTOP-INRPAUU.14812.XIfMbJJx  .coverage.DESKTOP-INRPAUU.17500.XiSsUiSx  .gitignore  BRAND_COLOR_CONFIG_SEARCH_RESULTS.md  GENERIC_VOUCHER_IMPROVEMENTS.patch  INVENTORY_IMPLEMENTATION_COMPLETE.md  PURCHASE_ANALYSIS_COMPLETE.md  PURCHASE_DECISION_FRAMEWORK.md  PURCHASE_DOCUMENTATION_INDEX.md  PURCHASE_IMPLEMENTATION_PHASE1_COMPLETE.md  README.md  VOUCHER_CONFIG_IMPLEMENTATION_STATUS.md  coverage.xml  newappvoucherschema.md  plantodo.md  temp_head_designer.html
Docs/: APPROVAL_NOTIFICATION_FEATURE.md  CONFIGURABLE_REPORTING_USE_CASE.md  DASON_TEMPLATE_COMPONENTS.md  INVENTORY_DEPLOYMENT_CHECKLIST.md  INVENTORY_INDEX.md  INVENTORY_QUICK_REFERENCE.md  INVENTORY_STATUS_REPORT.md  MULTI_CURRENCY_STATUS.md  MULTI_CURRENCY_VERIFICATION.md  SESSION_COMPLETION_SUMMARY.md  consolidated_todo_register.md  demoroadmap.py  docker.md  erp_module_gap_assessment.md  journal_entry_demo.html  udf_and_inventory_flow.md
ERP/: .commitlintrc.json  .coverage  .coverage.DESKTOP-INRPAUU.12020.XbEamVTx  .coverage.DESKTOP-INRPAUU.15564.XBgPSOOx  .coverage.DESKTOP-INRPAUU.15568.XtUnYnGx  .coverage.DESKTOP-INRPAUU.16580.XaDAUQyx  .coverage.DESKTOP-INRPAUU.20768.XUhRmENx  .coverage.DESKTOP-INRPAUU.22900.XfwQHgFx  .coverage.DESKTOP-INRPAUU.6588.XTJtphOx  .coverage.DESKTOP-INRPAUU.9144.XNkIfXFx  .dockerignore  .env  .env.example  .gitignore  .kilocodeignore  .pre-commit-config.yaml  .secrets.baseline  00_START_HERE.md  ACCOUNTING_VOUCHER_ENTRY_CLEANUP.md  API.md  AP_PAYMENT_IMPLEMENTATION_TODO.md  ARCHITECTURE.md  CHANGELOG.md  CHART_OF_ACCOUNTS_ENHANCED_README.md  CONTRIBUTING.md  DAYBOOK_COMPLETE_IMPLEMENTATION_GUIDE.md  DAYBOOK_IMPLEMENTATION_COMPLETE.md  DAYBOOK_QUICK_REFERENCE.md  DAYBOOK_UI_IMPROVEMENTS.md  DAYBOOK_UI_QUICK_SUMMARY.md  DEPLOYMENT_FINALIZATION.md  DEPLOYMENT_PHASE_3.md  DOCUMENTATION_INDEX.md  DYNAMIC_VOUCHER_SYSTEM.md  Dockerfile  ERP_BUILD_MODEL.md  FINAL_SESSION_VISUAL_SUMMARY.md  FINAL_SUMMARY.md  GENERIC_VOUCHER_ENTRY_STATUS.md  (+165 more)
ERP/sdk/python/: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt  setup.py
ERP/sdk/python/examples/: basic_usage.py
ERP/sdk/python/himalytix/: __init__.py  async_client.py  client.py  exceptions.py
ERP/sdk/python/himalytix/resources/: __init__.py  base.py  journal_entries.py  tenants.py  users.py
(+2089 files in other folders)
